[package]
name = "img2ascii"
description = "Convert images to colored ascii art."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.8"
once_cell = "1.19.0"
owo-colors = "4.0.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
